package _02_interfaces.interfaces_intro;

/**
 * Najprostszy możliwy interfejs — "kontrakt" z jedną metodą.
 * Każda klasa, która go implementuje, obiecuje że potrafi się wydrukować.
 *
 * Uruchomienie: patrz IntroDemo.java
 */
public interface Printable {
    void print();
}

